tests/ui/splat/splat-dyn-asref-tuple-fail.stderr
error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a Trait(std::convert::AsRef<std::string::String>)
  --> $DIR/splat-dyn-asref-tuple-fail.rs:12:36
   |
LL | fn dyn_asref_splat<T>(#[splat] _t: &dyn AsRef<T>)
   |                                    ^^^^^^^^^^^^^
...
LL |     dyn_asref_splat::<String>(&s);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `String` is not a tuple
  --> $DIR/splat-dyn-asref-tuple-fail.rs:26:23
   |
LL |     dyn_asref_splat::<String>(&s);
   |                       ^^^^^^ the nightly-only, unstable trait `std::marker::Tuple` is not implemented for `String`
   |
note: required by a bound in `dyn_asref_splat`
  --> $DIR/splat-dyn-asref-tuple-fail.rs:18:8
   |
LL | fn dyn_asref_splat<T>(#[splat] _t: &dyn AsRef<T>)
   |    --------------- required by a bound in this function
...
LL |     T: std::marker::Tuple,
   |        ^^^^^^^^^^^^^^^^^^ required by this bound in `dyn_asref_splat`

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a Trait(std::convert::AsRef<_>)
  --> $DIR/splat-dyn-asref-tuple-fail.rs:12:36
   |
LL | fn dyn_asref_splat<T>(#[splat] _t: &dyn AsRef<T>)
   |                                    ^^^^^^^^^^^^^
...
LL |     dyn_asref_splat(&s);
   |     ^^^^^^^^^^^^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a Trait(std::convert::AsRef<(u8, f32)>)
  --> $DIR/splat-dyn-asref-tuple-fail.rs:12:36
   |
LL | fn dyn_asref_splat<T>(#[splat] _t: &dyn AsRef<T>)
   |                                    ^^^^^^^^^^^^^
...
LL |     dyn_asref_splat::<(u8, f32)>(&t);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a Trait(std::convert::AsRef<_>)
  --> $DIR/splat-dyn-asref-tuple-fail.rs:12:36
   |
LL | fn dyn_asref_splat<T>(#[splat] _t: &dyn AsRef<T>)
   |                                    ^^^^^^^^^^^^^
...
LL |     dyn_asref_splat(&t);
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
